--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,22 @@ If your plugin does not need CSS, delete this file.
 .block-language-page-table-csv del::before {
 	content: " ";
 }
+
+.block-language-page-table .loading,
+.block-language-page-table-csv .loading {
+	text-align: center;
+}
+.block-language-page-table .loading .loading_spinner,
+.block-language-page-table-csv .loading .loading_spinner {
+	margin: 0 auto;
+	width: 36px;
+	height: 36px;
+	border: 3px solid var(--ui1);
+	border-top: 3px solid var(--tx1);
+	border-radius: 50%;
+	animation: spin 2s linear infinite;
+}
+@keyframes spin {
+	0% {transform: rotate(0deg);}	
+	100% {transform: rotate(360deg);}	
+}
